PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/NoINDEXAsParameter.par
NoINDEXAsParameter {

seq test (Int index, Int INDEx) : Int {
    return 0
}

seq main() : Void {


}
}