PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoINDEXAsParameter.par
NoINDEXAsParameter {

seq test (Int INDEX, Int INDEX0) : Int {
    return 0
}

seq main() : Void {


}
}